@@ -4,6 +4,7 @@ import chn_class
 from regexer import Regexer
 from streams.brightcove import BrightCove
 from streams.m3u8 import M3u8
+from helpers.jsonhelper import JsonHelper
 
 from parserdata import ParserData
 from logger import Logger
@@ -56,6 +57,7 @@ class Channel(chn_class.Channel):
                                 .replace("(?<", "(?P<") \
                                 % (channelId or self.channelCode,)
         self._AddDataParser(self.mainListUri, name="Mainlist Parsing", matchType=ParserData.MatchExact,
+                            preprocessor=self.AddOthers,
                             parser=self.episodeItemRegex, creator=self.CreateEpisodeItem)
 
         # normal video items
@@ -104,43 +106,34 @@ class Channel(chn_class.Channel):
         # ====================================== Actual channel setup STOPS here =======================================
         return
 
-    # def PreProcessFolderList(self, data):
-    #     """Performs pre-process actions for data processing/
-    #
-    #     Arguments:
-    #     data : string - the retrieve data that was loaded for the current item and URL.
-    #
-    #     Returns:
-    #     A tuple of the data and a list of MediaItems that were generated.
-    #
-    #
-    #     Accepts an data from the ProcessFolderList method, BEFORE the items are
-    #     processed. Allows setting of parameters (like title etc) for the channel.
-    #     Inside this method the <data> could be changed and additional items can
-    #     be created.
-    #
-    #     The return values should always be instantiated in at least ("", []).
-    #
-    #     """
-    #
-    #     Logger.Info("Performing Pre-Processing")
-    #     items = []
-    #
-    #     dataStart = data.find('<h2 class="showcase-heading">')
-    #     # end = data.find('_SerieSeasonSlider"')
-    #     end = data.find('</li></ul></div><div')
-    #     if end > 0:
-    #         end += 20  # we want the </li> in case we found it
-    #     resultData = data[dataStart:end]
-    #
-    #     # Add a Clips item
-    #     # if "_Clips" in self.parentItem.url:
-    #     #     # self.CreateVideoItem = self.CreateClipItem
-    #     #     Logger.Trace("Switching to CLIPS regex")
-    #     #     self.videoItemRegex = self.clipItemRegex
-    #
-    #     Logger.Debug("Pre-Processing finished")
-    #     return resultData, items
+    def AddOthers(self, data):
+        """Performs pre-process actions for data processing/
+
+        Arguments:
+        data : string - the retrieve data that was loaded for the current item and URL.
+
+        Returns:
+        A tuple of the data and a list of MediaItems that were generated.
+
+
+        Accepts an data from the ProcessFolderList method, BEFORE the items are
+        processed. Allows setting of parameters (like title etc) for the channel.
+        Inside this method the <data> could be changed and additional items can
+        be created.
+
+        The return values should always be instantiated in at least ("", []).
+
+        """
+
+        Logger.Info("Performing Pre-Processing")
+        items = []
+
+        others = "http://www.kijk.nl/ajax/section/overview/popular_PopularFormats/1/100"
+        otherData = UriHandler.Open(others, proxy=self.proxy)
+        data += otherData
+
+        Logger.Debug("Pre-Processing finished")
+        return data, items
 
     def CreateFolderItem(self, resultSet):
         """Creates a MediaItem of type 'folder' using the resultSet from the regex.
@@ -300,24 +293,32 @@ class Channel(chn_class.Channel):
 
         # now the mediaurl is derived. First we try WMV
         data = UriHandler.Open(url, proxy=self.proxy, referer=referer)
-        Logger.Trace(self.mediaUrlRegex)
-        objectData = Regexer.DoRegex(self.mediaUrlRegex, data)[0]
-        Logger.Trace(objectData)
+        objectData = Regexer.DoRegex(self.mediaUrlRegex, data)
+        if not objectData:
+            Logger.Info("No HTML video found. Trying new API")
+            url = "http://embed.kijk.nl/api/video/%s" % (videoId,)
+            data = UriHandler.Open(url, proxy=self.proxy, referer=referer)
+            videoJson = JsonHelper(data)
+            m3u8Url = videoJson.GetValue("playlist")
+            part = item.CreateNewEmptyMediaPart()
+            for s, b in M3u8.GetStreamsFromM3u8(m3u8Url, self.proxy, appendQueryString=True):
+                item.complete = True
+                # s = self.GetVerifiableVideoUrl(s)
+                part.AppendMediaStream(s, b)
+        else:
+            objectData = objectData[0]
+            # seed = "61773bc7479ab4e69a5214f17fd4afd21fe1987a"
+            # seed = "0a2b91ec0fdb48c5dd5239d3e796d6f543974c33"
+            seed = "0b0234fa8e2435244cdb1603d224bb8a129de5c1"
+            amfHelper = BrightCove(Logger.Instance(), str(objectData[0]), str(objectData[1]), url, seed)  # , proxy=ProxyInfo("localhost", 8888)
+            item.description = amfHelper.GetDescription()
 
-        # seed = "61773bc7479ab4e69a5214f17fd4afd21fe1987a"
-        # seed = "0a2b91ec0fdb48c5dd5239d3e796d6f543974c33"
-        seed = "0b0234fa8e2435244cdb1603d224bb8a129de5c1"
-        amfHelper = BrightCove(Logger.Instance(), str(objectData[0]), str(objectData[1]), url, seed)  # , proxy=ProxyInfo("localhost", 8888)
-        item.description = amfHelper.GetDescription()
-
-        part = item.CreateNewEmptyMediaPart()
-        for stream, bitrate in amfHelper.GetStreamInfo():
-            if "m3u8" in stream:
-                for s, b in M3u8.GetStreamsFromM3u8(stream, self.proxy):
-                    item.complete = True
-                    # s = self.GetVerifiableVideoUrl(s)
-                    part.AppendMediaStream(s, b)
-            part.AppendMediaStream(stream.replace("&mp4:", ""), bitrate)
-
-        item.complete = True
+            part = item.CreateNewEmptyMediaPart()
+            for stream, bitrate in amfHelper.GetStreamInfo():
+                if "m3u8" in stream:
+                    for s, b in M3u8.GetStreamsFromM3u8(stream, self.proxy):
+                        item.complete = True
+                        # s = self.GetVerifiableVideoUrl(s)
+                        part.AppendMediaStream(s, b)
+                part.AppendMediaStream(stream.replace("&mp4:", ""), bitrate)
         return item
