@@ -1,7 +1,8 @@
 ﻿[B]Changelog[/B]
-Fixed: Missing thumbs on the site cause missing items (Fixes #791)
+Fixed: Some kijk.nl shows were missing (Fixes #794)
 
 [I]Previous changes[/I]
+Fixed: Missing thumbs on the site cause missing items (Fixes #791)
 Fixed: Not all kijk.nl shows were displayed
 Fixed: Kijk.nl removed their descriptions, which broke the channels (Fixes #737)
 Fixed: clips of Kijk.nl would not play
